# Local-File-Organizer

./: .coverage  .dockerignore  .eslintrc.json  .gitignore  ADMIN_GUIDE.md  BENDER_QUICKSTART.md  BEST_PRACTICES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE-NewAyge  QUICKSTART.md  README-NewAyge.md  README.md  README_AI.md  README_Sorting_System.md  README_Workspace_Setup.md  README_new.md  SECURITY.md  TASKS.md  TROUBLESHOOTING.md  add_huggingface_to_path.ps1  add_to_path.ps1  agent_memory_OrganizerAI.pkl  ai_classifier.py  ai_hybrid_classifier.py  ai_modules.md  ai_team_orchestrator.py  app.py  audio_transcriber.py  auto_evolve_project.py  auto_optimize.py  auto_update_mcp.py  bulk_processor.py  case_analyzer.py  check_hardware.py  cleanup_diagnostics.py  (+126 more)
src/gui/: App.tsx  index.html  index.tsx
src/gui/__tests__/: app.test.tsx
src/gui/components/: ApiServiceControl.tsx  AuditContradictions.tsx  Dashboard.tsx  FileHierarchy.tsx  MemoryLearning.tsx  Settings.tsx  Sidebar.tsx  Topbar.tsx
src/gui/styles/: main.css
tests/: test_ai_team_orchestrator.py  test_evolutionary_optimizer.py  test_file_cache.py  test_forensic_case_organizer.py  test_forensic_organizer.py  test_orchestrator.py  test_summarizer.py  test_upgrade_system.py
